# lakefront

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.noray  README.md  justfile  pyproject.toml  runner.py
configs/: failure_test.yaml  setup_example.yaml  simple.yaml
configs/test/: failure_test.yaml  setup_example.yaml  simple.yaml
jobs/: simple_job.py  square.py
jobs/segclr/: config.yaml  transfer_segclr.py  transfer_segclr_batched.py
jobs/test/: flaky.py
jobs/test_busy/: config.yaml  items.py  job.py
jobs/test_flaky/: config.yaml  items.py
jobs/test_setup/: config.yaml  items.py  job.py
jobs/test_simple/: config.yaml
k8s/: README.md  deployment.yaml  ray-cluster.yaml  ray-service.yaml
old_examples/: Dockerfile  kube-task.yml  make_cluster.sh
openspec/changes/archive/2026-05-20-modular-ray-jobs/: proposal.md
openspec/changes/job-cluster-config-overrides/: design.md  tasks.md
openspec/changes/modular-ray-jobs/: design.md  tasks.md
openspec/specs/cluster-config/: spec.md
openspec/specs/insertion-authoring/: spec.md
openspec/specs/job-authoring/: spec.md
openspec/specs/job-cluster-overrides/: spec.md
openspec/specs/job-folder-layout/: spec.md
openspec/specs/job-runner/: spec.md
scratch/: segclr_to_lake.py  table_to_deltalake.py  try_jupyter.py
scripts/: build_and_push.sh  build_docker.sh  cleanup_cluster.sh  cleanup_local_k8s.sh  job.sh  jupyter_connect.sh  launch_cluster.sh  run_local.py  ssh_cluster.sh  submit_job.sh  sync_scratch.sh  test_docker.sh  test_local_k8s.sh
(+12 files in other folders)
