[project]
dependencies = [
    "caveclient>=8.0.1",
    "deltalake>=1.4.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "ray[default]>=2.54.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
description = "Add your description here"
name = "lakefront"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"
